--- a/steve-css-portfolio/index.html
+++ b/steve-css-portfolio/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stephen Herbert/Resume"</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <main>
@@ -16,22 +17,22 @@
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-      <section>
+      <section class="projects">
         <h2>Featured Projects</h2>
         <p>Stephen has delivered systems in diverse areas</p>
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section>
           <h3>Fruit Machine</h3>
-          <img src="project-thumbnail.png" alt="description of image">
+          <img src="images/thumbnail-1.jpg" alt="Fruit Machine">
           <p>Stephen's first project was the development of software for a fruit machine.  This involved interfacing directly with the hardware to read switches, control lamps and spin reels..</p>
-          <a href="#" target="_blank">View project / case study</a>
+          <a class="btn" ref="#" target="_blank">View project / case study</a>
         </section>
         <!-- End of Project block. -->
       </section>
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
-      <section>
+      <section class="work-experience">
         <h2>Work Experience</h2>
         <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
 
@@ -53,7 +54,7 @@
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-      <section>
+      <section class="education">
         <h2>Education</h2>
 
         <!-- Copy this whole <section> block to add more schools. -->
