--- a/steve-css-portfolio/index.html
+++ b/steve-css-portfolio/index.html
@@ -10,14 +10,17 @@
     <main>
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
+	      <div class="content-wrap">
         <h1>Stephen Herbert</h1>
         <h2>Principal Systems Engineer</h2>
 
 	<p>Stephen has developed many systems with special interest in embedded systems and how those integrate within larger systems.</p>
+	      </div>
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section class="projects">
+	      <div class="content-wrap">
         <h2>Featured Projects</h2>
         <p>Stephen has delivered systems in diverse areas</p>
 
@@ -29,10 +32,12 @@
           <a class="btn" ref="#" target="_blank">View project / case study</a>
         </section>
         <!-- End of Project block. -->
+	      </div>
       </section>
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="work-experience">
+	      <div class="content-wrap">
         <h2>Work Experience</h2>
         <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
 
@@ -51,10 +56,12 @@
           </ul>
         </section>
         <!-- End of Job block. -->
+	      </div>
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class="education">
+	      <div class="content-wrap">
         <h2>Education</h2>
 
         <!-- Copy this whole <section> block to add more schools. -->
@@ -64,10 +71,12 @@
           <p>Summary or accomplishments.</p>
         </section>
         <!-- End of School block. -->
+	      </div>
       </section>
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
+	      <div class="content-wrap">
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
@@ -78,6 +87,7 @@
           <li><a href="#" target="_blank">LinkedIn</a></li>
           <li><a href="#" target="_blank">Facebook</a></li>
         </ul>
+	      </div>
       </footer>
     </main>
   </body>
